Fixed major overflow issue on mobile screens

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
     padding-left: 20px;
     box-shadow: 5px 10px rgb(128, 128, 128);
     text-align: center;
-    margin-top: 20px;
+    margin-top: 10px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: auto;
@@ -27,8 +27,7 @@ body {
         padding: 10px;
         box-shadow: 5px 10px rgb(128, 128, 128);
         text-align: center;
-        margin-left: 30px;
-        margin-right: 30px;
+        margin: 10px;
     }
 }
 
@@ -41,8 +40,10 @@ body {
     text-align: center;
     display: flex;
     justify-content: space-around;
+    margin-top: 10px;
     margin-right: 300px;
     margin-left: 300px;
+    margin-bottom: auto;
 }
 
 @media screen and (max-width: 992px) {
@@ -55,6 +56,7 @@ body {
         text-align: center;
         display: flex;
         justify-content: space-around;
+        margin: 10px;
     }
 }
 
@@ -77,6 +79,7 @@ body {
         padding: 10%;
         text-align: center;
         box-shadow: 5px 10px rgb(128, 128, 128);
+        margin: 10px;
     }
 }
 
@@ -87,8 +90,10 @@ body {
     padding: 10%;
     text-align: left;
     box-shadow: 5px 10px rgb(128, 128, 128);
+    margin-top: 10px;
     margin-right: 300px;
     margin-left: 300px;
+    margin-bottom: 20px;
 }
 
 @media screen and (max-width: 992px) {
@@ -99,6 +104,7 @@ body {
         padding: 10%;
         text-align: left;
         box-shadow: 5px 10px rgb(128, 128, 128);
+        margin: 10px;
     }
 }
 
@@ -130,22 +136,20 @@ body {
 
 #container {
     font-size: 30px;
-    min-height: 300px;
     width: 100%;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 50px 70px 1fr 10%;
-    gap: 80px 80px;
+    grid-template-rows: 90px 90px minmax(0, 1fr) 10%;
+    gap: 70px 70px;
 }
 
 @media screen and (max-width: 992px) {
     #container {
         font-size: 20px;
-        min-height: 300px;
         width: 100%;
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 50px 50px 1fr 10%;
+        grid-template-rows: 70px 70px minmax(0, 1fr) 10%;
         gap: 20px 20px;
         min-height: 100vh;
     }
